syntax = "proto3";
package brainslurp;
option go_package = "github.com/devnull-twitch/brainslurp/lib/proto/issue";

message ViewStatus {
  uint64 number = 1;
  int64 set_at = 2;
}

message FlowStatus {
  uint64 number = 1;
  int64 set_at = 2;
}

enum IssueCategory {
  Unknown = 0;
  Bug = 1; 
  Feature = 2;
  Operations = 3;
  Question = 4;
}

message Issue {
  uint64 number = 1;
  int64 created_at = 5;
  string title = 20;
  string body = 21;
  IssueCategory category = 22;
  reserved 40;
  repeated uint64 tag_numbers = 41;
  repeated ViewStatus views = 50;
  repeated FlowStatus flows = 51;
}